--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <div class="row align-items-center">
         <!-- Left Side - Image -->
         <div class="col-lg-6 col-md-12">
-          <img src="assets/img/a1.webp" alt="Simco Solutions Image" class="img-fluid w-100">
+          <img src="assets/img/a1.png" alt="Simco Solutions Image" class="img-fluid w-100">
         </div>
         <!-- Right Side - Text Content -->
         <div class="col-lg-6 col-md-12 text-white">
