--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <!-- Left side text (centered vertically) -->
             <div class="col-md-6 text-left d-flex align-items-center justify-content-center">
                 <div class="text-content">
-                    <h1>Your Trusted Partner for Seamless Connectivity</h1>
+                    <h1 class"index-h>Your Trusted Partner for Seamless Connectivity</h1>
                     <p class="description fw-light">We excel in providing tailored mobile and internet solutions, designed to meet the diverse connectivity needs of individuals and businesses.</p>
                 </div>
             </div>
